--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Guess the place using the panoramic view and music from that place!",
   "main": "script.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,5 +28,8 @@
     "@types/cookie-parser": "^1.4.7",
     "dotenv-webpack": "^8.1.0",
     "eslint-webpack-plugin": "^4.2.0"
+  },
+  "engines": {
+    "node": ">20.6"
   }
 }
