--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Guess the place using the panoramic view and music from that place!",
   "main": "script.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node --env-file=.env app.js",
+    "dev": "nodemon --env-file=.env app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
